syntax = "proto3";

package pb;

service ETLService {
    rpc GetWords (Empty) returns (GetWordsResponse) {}
    rpc AddWord (AddWordRequest) returns (Empty) {}
    rpc GetWordById (GetWordByIdRequest) returns (Word) {}
    rpc GetWordByWord (GetWordByWordRequest) returns (Word) {}
    rpc DeleteWord (DeleteWordRequest) returns (Empty) {}

    rpc BuildSqlite (Empty) returns (BuildSqliteResponse) {}
    rpc InsepectIsbn(InsepectIsbnRequest) returns (InsepectIsbnResponse) {}
    rpc AddBook (AddBookRequest) returns (Empty) {}

    rpc CalculateRelevantWords (CalculateRelevantWordsRequest) returns (Empty) {}
}

message Empty {
}

message Word {
    int32 id = 1;
    string word = 2;
    string pronunciation = 3;
    repeated Definition definitions = 4;
}

message Definition {
    int32 id = 1;
    int32 word_id = 2;
    string definition = 3;
    string pos = 4;
    repeated Example examples= 5;
}

message Example {
    int32 definition_id = 1;
    string foreign = 2;
    string native = 3;
}

message AddWordRequest {
    Word word = 1;
}

message GetWordsResponse {
    repeated Word words = 1;
}

message GetWordByIdRequest{
    int32 id = 1;
}

message GetWordByWordRequest{
    string word = 1;
}

message GetWordResponse{
    Word word = 1;
}

message DeleteWordRequest {
    int32 id = 1;
}

message BuildSqliteResponse {
    string url = 1;
}

message InsepectIsbnRequest {
    string isbn = 1;
}

message InsepectIsbnResponse {
    
}

message AddBookRequest {
    string isbn = 1;
    string redis_key = 2;
}

message CalculateRelevantWordsRequest {
    string reltype = 1;
}

message RenewRecommenededBookRequest {
    int32 user_low = 1;
    int32 user_high = 2;
}

message GetNeededQuizRequest {

}

message GetNeededQuizResponse {

}

message AnalyzeHtmlRequest {

}

message AnalyzeHtmlResponse {

}

message CreateSentencesRequest {

}

message CreateSentencesResponse {

}
